bot模块 - 词条循环优化；属性计算增加攻击力转主属，攻击力百分比转BD